--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "path": "^0.12.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-pdf": "0.0.10",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
-    "socket.io": "^1.6.0",
+    "simple-react-pdf": "^1.0.6",
+    "socket.io": "^1.6.0"
   }
 }
