--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "postinstall": "webpack -p",
-    "start": "node server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +22,6 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
@@ -38,6 +35,10 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
-    "simple-react-pdf": "^1.0.6"
-  }
+    "simple-react-pdf": "^1.0.6",
+    "webpack": "^1.12.9"
+  },
+  "engines": {
+  "node": "7.0.0"
+}
 }
