--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
     "simple-react-pdf": "^1.0.6",
+    "three": "^0.91.0",
     "webpack": "^1.12.9"
   },
   "engines": {
-  "node": "7.0.0"
-}
+    "node": "7.0.0"
+  }
 }
